# threads

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  Makefile  README.md  build.rs
.threads-config/: cache.json
bun/: README.md  package.json
bun/src/: git.ts  section.ts  thread.ts  utils.ts  workspace.ts
go/: Makefile  go.mod
go/cmd/threads/: main.go
go/internal/cmd/: body.go  commit.go  completion.go  git.go  list.go  log.go  move.go  new.go  note.go  path.go  read.go  remove.go  reopen.go  resolve.go  root.go  stats.go  status.go  todo.go  update.go  validate.go
go/internal/git/: git.go
go/internal/output/: output.go
go/internal/thread/: section.go  thread.go  thread_test.go
go/internal/workspace/: workspace.go  workspace_test.go
perl/: IMPLEMENTATION_PLAN.md  Makefile  cpanfile
perl/lib/Threads/: CLI.pm  Git.pm  Section.pm  Thread.pm  Workspace.pm
python/: pyproject.toml  run-threads.sh  test-threads  threads-wrapper
python/src/threads/: __init__.py  __main__.py  cli.py  git.py  models.py  output.py  storage.py  workspace.py
python/src/threads/commands/: __init__.py  crud.py  lifecycle.py  query.py  sections.py
ruby/: README.md
ruby/lib/threads/: commands.rb  git.rb  section.rb  thread.rb  workspace.rb
rust/: Cargo.toml  README.md
rust/src/: git.rs  main.rs  output.rs  thread.rs  workspace.rs
rust/src/cmd/: body.rs  commit.rs  git_cmd.rs  list.rs  log.rs  mod.rs  move_cmd.rs  new.rs  note.rs  path.rs  read.rs  remove.rs  reopen.rs  resolve.rs  stats.rs  status.rs  todo.rs  update.rs  validate.rs
shell/: threads
src/: args.rs  cache.rs  config.rs  fuzzy.rs  git.rs  input.rs  main.rs  output.rs  thread.rs  workspace.rs  wrap.rs
src/cmd/: body.rs  cache.rs  commit.rs  config_cmd.rs  deadline.rs  event.rs  git_cmd.rs  info.rs  list.rs  log.rs  migrate.rs  mod.rs  move_cmd.rs  new.rs  note.rs  path.rs  read.rs  remove.rs  reopen.rs  resolve.rs  search.rs  stats.rs  status.rs  todo.rs  update.rs  validate.rs
swift/: Package.swift  README.md
swift/Sources/threads/: Git.swift  Section.swift  Thread.swift  Threads.swift  Utilities.swift  Workspace.swift
swift/Sources/threads/Commands/: BodyCmd.swift  CommitCmd.swift  GitCmd.swift  ListCmd.swift  LogCmd.swift  MoveCmd.swift  (+12 more)
test/: HARDENING_PLAN.md  benchmark.sh  run_tests.sh
test/benchmark/: bench.sh  generate-workspace.sh
test/benchmark/categories/: mutation.sh  query.sh  scale.sh  startup.sh
test/benchmark/lib/: common.sh  output.sh  timing.sh  workspace.sh
test/benchmark/profiles/: full.conf  quick.conf
test/cases/: test_body.sh  test_config.sh  test_direction.sh  test_edge_cases.sh  test_edge_extended.sh  test_flag_parsing.sh  test_format.sh  test_git.sh  test_git_boundary.sh  test_lifecycle.sh  test_list.sh  test_log.sh  test_log_agenda.sh  test_move.sh  test_new.sh  test_note.sh  test_note_agenda.sh  test_path.sh  test_path_resolution.sh  test_read.sh  test_review_regressions.sh  test_search.sh  test_stats.sh  test_todo.sh  test_todo_agenda.sh  test_validate.sh
test/lib/: assertions.sh  helpers.sh  setup.sh
test/parity/: compare-implementations.sh
