[package]
name = "threads"
version = "0.0.0"  # Actual version from git describe via build.rs
edition = "2021"
description = "Thread management CLI for LLM workflows"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
chrono = "0.4"
getrandom = "0.2"
regex = "1"
md-5 = "0.10"
serde_json = "1"

[package.metadata]
tools-release = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
