[package]
name = "threads"
version = "0.0.0"  # Actual version from git describe via build.rs
edition = "2021"
description = "Thread management CLI for LLM workflows"
license = "GPL-3.0-or-later"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
chrono = "0.4"
colored = "2"
getrandom = "0.2"
regex = "1"
md-5 = "0.10"
serde_json = "1"
termimad = "0.30"
tabled = { version = "0.17", features = ["ansi"] }
terminal_size = "0.4"
unicode-width = "0.2"
git2 = { version = "0.19", default-features = false }
schemars = "0.8"
dirs = "5"

[package.metadata]
tools-release = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
