[package]
name = "threads"
version = "0.1.0"
edition = "2021"
description = "Thread management CLI for LLM workflows"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
chrono = "0.4"
rand = "0.8"
regex = "1"
md-5 = "0.10"
serde_json = "1"
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
