[package]
name = "threads"
version = "0.1.0"
edition = "2021"
description = "Thread management CLI for LLM workflows"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
chrono = "0.4"
getrandom = "0.2"
regex = "1"
md-5 = "0.10"
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
